--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "libdjson",
 	"description": "A D1/D2/Tango/Phobos/Phobos2 compatible JSON parsing and generation library",
-	"homepage": "http://example.org",
+	"homepage": "https://256.makerslocal.org/wiki/Libdjson",
 	"copyright": "Copyright 2013, Kinsey Moore",
 	"license": "BSL-1.0",
 	"authors": [
